fixed non aligned input and button

--- a/main.css
+++ b/main.css
@@ -49,14 +49,12 @@ h1 {
 
 section#list-manager {
     width: 100%;
-    background-color: var(--color-background-secondary);
-}
-
-section#list-manager {
     padding: 1rem 2rem;
     display: flex;
     justify-content: space-between;
-    gap: 10%
+    align-items: center;
+    gap: 10%;
+    background-color: var(--color-background-secondary);
 }
 
 input#new-taskfield {
